--- a/sample/Importance_DescriptorGroupRelevanceImportance.yml
+++ b/sample/Importance_DescriptorGroupRelevanceImportance.yml
@@ -1,9 +1,9 @@
 link:
-- nodename: DescriptorGroupRelevanceImportance
-  nodetype: parts
-  linktype: is-a
-  link:
+- link:
   - nodename: WeakDescriptorGroupImportance
     nodetype: parts
   - nodename: StrongDescriptorGroupImportance
     nodetype: parts
+  linktype: is-a
+  nodename: DescriptorGroupRelevanceImportance
+  nodetype: parts
