--- a/sample/AtomicProperty_CausExpr.yml
+++ b/sample/AtomicProperty_CausExpr.yml
@@ -1,81 +1,68 @@
 workflow:
-  format: v2.2
+  format: v2.3
   block:
-  - blockname:
+  - blockname: null
     order: workflow
     list:
     - group:
-      - !!omap
-        - outputname: chooseElement
-        - outputtype: function
+      - outputname: chooseElement
+        outputtype: function
     - group:
-      - !!omap
-        - methodname: typicalMaterials
-        - methodtype: function
-        - outputname: chooseTypicalMaterialsOfElement
-        - outputtype: function
-  - blockname:
+      - methodname: typicalMaterials
+        methodtype: function
+        outputname: chooseTypicalMaterialsOfElement
+        outputtype: function
+  - blockname: null
     order: workflow
     list:
     - group:
-      - !!omap
-        - outputname: chooseTypicalMaterialsOfElement
-        - outputtype: function
+      - outputname: chooseTypicalMaterialsOfElement
+        outputtype: function
     - group:
-      - !!omap
-        - methodname: XrayExperiment
-        - methodtype: method
-        - outputname: experimentalCrystalGeometries
-        - outputtype: parts
+      - methodname: XrayExperiment
+        methodtype: method
+        outputname: experimentalCrystalGeometries
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: calculateAtomicRadius
-        - methodtype: function
-        - outputname: atomicRadius
-        - outputtype: parts
-      - !!omap
-        - methodname: calculatevdWRadius
-        - methodtype: function
-        - outputname: vdWRadius
-        - outputtype: parts
-      - !!omap
-        - methodname: calculateCovalentRadius
-        - methodtype: function
-        - outputname: covalentRadius
-        - outputtype: parts
-  - blockname:
+      - methodname: calculateAtomicRadius
+        methodtype: function
+        outputname: atomicRadius
+        outputtype: parts
+      - methodname: calculatevdWRadius
+        methodtype: function
+        outputname: vdWRadius
+        outputtype: parts
+      - methodname: calculateCovalentRadius
+        methodtype: function
+        outputname: covalentRadius
+        outputtype: parts
+  - blockname: null
     order: workflow
     list:
     - group:
-      - !!omap
-        - outputname: chooseTypicalMaterialsOfElement
-        - outputtype: function
+      - outputname: chooseTypicalMaterialsOfElement
+        outputtype: function
     - group:
-      - !!omap
-        - methodname: getExperimentalIonicPotential
-        - methodtype: function
-        - outputname: ExperimentalIonicPotential
-        - outputtype: parts
-      - !!omap
-        - methodname: getExperimentalElectronAffinity
-        - methodtype: function
-        - outputname: ExperimentalElectronAffinity
-        - outputtype: parts
-      - !!omap
-        - methodname: getExperimentalBindingEnergies
-        - methodtype: function
-        - outputname: BindingEnergies
-        - outputtype: parts
-  - blockname:
+      - methodname: getExperimentalIonicPotential
+        methodtype: function
+        outputname: ExperimentalIonicPotential
+        outputtype: parts
+      - methodname: getExperimentalElectronAffinity
+        methodtype: function
+        outputname: ExperimentalElectronAffinity
+        outputtype: parts
+      - methodname: getExperimentalBindingEnergies
+        methodtype: function
+        outputname: BindingEnergies
+        outputtype: parts
+  - blockname: null
     order: workflow
     list:
     - group:
-      - !!omap
-        - outputname: BindingEnergies
-        - outputtype: parts
+      - outputname: BindingEnergies
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: calculateElectronNegativity
-        - methodtype: function
-        - outputname: ElectronNegativity
-        - outputtype: parts
+      - methodname: calculateElectronNegativity
+        methodtype: function
+        outputname: ElectronNegativity
+        outputtype: parts
