--- a/sample/AtomicProperty_CausTop.yml
+++ b/sample/AtomicProperty_CausTop.yml
@@ -1,102 +1,100 @@
 link:
-- nodename: AtomicDescriptor
-  nodetype: parts
-  linktype: part-of
-  link: 
+- link:
   - nodename: AtomicDescriptorFeature
     nodetype: parts
-
-- nodename: AtomicDescriptorFeature
+  linktype: part-of
+  nodename: AtomicDescriptor
   nodetype: parts
-  linktype: is-a
-  link:
+- link:
   - nodename: AtomicElementDescriptor
     nodetype: parts
   - nodename: AtomicCoordinateDescriptor
     nodetype: parts
-
-- nodename: AtomicElementDescriptor
-  nodeytype: parts
   linktype: is-a
-  link:
-  - nodename: ExperimentalAtomicPropertyQuantity
-    nodetype: parts
-    linktype: is-a
-    link:
-    - nodename: ExperimentalAtomicLength
-      nodetype: parts
-      linktype: is-a
-      link:
+  nodename: AtomicDescriptorFeature
+  nodetype: parts
+- link:
+  - link:
+    - link:
       - nodename: atomicRadius
       - nodename: vdWRadius
       - nodename: covalentRadius
-    - nodename: ExperimentalAtomicEnergy
-      nodetype: parts
       linktype: is-a
-      link:
+      nodename: ExperimentalAtomicLength
+      nodetype: parts
+    - link:
       - nodename: ExperimentalIonicPotential
       - nodename: ExperimentalElectronAffinity
-    - nodename: ExperimentalEnergyRelatedPropertyQuantity
-      nodetype: parts
       linktype: is-a
-      link:
+      nodename: ExperimentalAtomicEnergy
+      nodetype: parts
+    - link:
       - nodename: ElectronNegativity
-  - nodename: fundamentalAtomicPropertyQuantity
-    nodetype: parts
+      linktype: is-a
+      nodename: ExperimentalEnergyRelatedPropertyQuantity
+      nodetype: parts
     linktype: is-a
-    link:
+    nodename: ExperimentalAtomicPropertyQuantity
+    nodetype: parts
+  - link:
     - nodename: numberOfElectron
     - nodename: averagedMass
-  - nodename: fundamentalAtomicPropertyQuantity
-    nodetype: parts
     linktype: is-a
-    link:
+    nodename: fundamentalAtomicPropertyQuantity
+    nodetype: parts
+  - link:
     - nodename: numberOfElectron
     - nodename: averagedMass
-  - nodename: PeriodictablePropertyQuantity
-    nonetype: parts
     linktype: is-a
-    link:
+    nodename: fundamentalAtomicPropertyQuantity
+    nodetype: parts
+  - link:
     - nodename: PeriodictableRow
     - nodename: PeriodictableColumn
-  - nodename: TheoreticalAtomicPropertyQuantity
-    nodetype: parts
     linktype: is-a
-    link:
-    - nodename: TheoreticalLength
-      nodetype: parts
-      linktype: is-a
-      link:
+    nodename: PeriodictablePropertyQuantity
+    nonetype: parts
+  - link:
+    - link:
       - nodename: r2
       - nodename: r2_s
       - nodename: r2_p
       - nodename: r2_d
       - nodename: r2_f
-    - nodename: TheoreicalEnergy
-      nodetype: parts
       linktype: is-a
-      link:
+      nodename: TheoreticalLength
+      nodetype: parts
+    - link:
       - nodename: TotalEnergy
       - nodename: sOrbitalEnergy
       - nodename: pOrbitalEnergy
       - nodename: dOrbitalEnergy
       - nodename: fOrbitalEnergy
-    - nodename: AngularMomentum
-      nodetype: parts
       linktype: is-a
-      link:
-      - nodename: 3dAngularMomentum
-        nodetype: parts
-        linktype: is-a
-        link:
+      nodename: TheoreicalEnergy
+      nodetype: parts
+    - link:
+      - link:
         - nodename: S3d
         - nodename: L3d
         - nodename: J3d
-      - nodename: 4fAngularMomentum
-        nodetype: parts
         linktype: is-a
-        link:
+        nodename: 3dAngularMomentum
+        nodetype: parts
+      - link:
         - nodename: J4f
         - nodename: gJ
         - nodename: J4fSpinDirectionProjection
         - nodename: J4fOrbitalDirectionProjection
+        linktype: is-a
+        nodename: 4fAngularMomentum
+        nodetype: parts
+      linktype: is-a
+      nodename: AngularMomentum
+      nodetype: parts
+    linktype: is-a
+    nodename: TheoreticalAtomicPropertyQuantity
+    nodetype: parts
+  linktype: is-a
+  nodename: AtomicElementDescriptor
+  nodeytype: parts
