--- a/sample/Crystal.yml
+++ b/sample/Crystal.yml
@@ -1,7 +1,7 @@
 link:
-- nodename: Crystal
-  nodetype: parts
-  linktype: is-a
-  link:
+- link:
   - nodename: CrystalCandidates
     nodetype: parts
+  linktype: is-a
+  nodename: Crystal
+  nodetype: parts
