--- a/sample/CrystalTargetToDescriptor_Top.yml
+++ b/sample/CrystalTargetToDescriptor_Top.yml
@@ -1,60 +1,52 @@
 workflow:
-  format: v2.2
+  format: v2.3
   block:
   - blockname: CD_CT
     order: workflow
     list:
     - group:
-      - !!omap
-        - methodname: DirectlyGenerateCrystalDescriptor
-        - methodtype: function
-        - outputname: CrystalDescriptor
-        - outputtype: parts
+      - methodname: DirectlyGenerateCrystalDescriptor
+        methodtype: function
+        outputname: CrystalDescriptor
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: CrystalDescriptorToCrystalTarget
-        - methodtype: method
-        - outputname: RelationshipBetweenCrystalTargetAndDescriptor
-        - outputtype: parts
+      - methodname: CrystalDescriptorToCrystalTarget
+        methodtype: method
+        outputname: RelationshipBetweenCrystalTargetAndDescriptor
+        outputtype: parts
   - blockname: AD_CD_CT
     order: workflow
     list:
     - group:
-      - !!omap
-        - methodname: generateAtomicDescriptor
-        - methodtype: function
-        - outputname: AtomicDescriptor
-        - outputtype: parts
+      - methodname: generateAtomicDescriptor
+        methodtype: function
+        outputname: AtomicDescriptor
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: AtomDescriptorToCrystalDescriptor
-        - methodtype: method
-        - outputname: CrystalDescriptor
-        - outputtype: parts
+      - methodname: AtomDescriptorToCrystalDescriptor
+        methodtype: method
+        outputname: CrystalDescriptor
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: CrystalDescriptorToCrystalTarget
-        - methodtype: method
-        - outputname: RelationshipBetweenCrystalTargetAndDescriptor
-        - outputtype: parts
+      - methodname: CrystalDescriptorToCrystalTarget
+        methodtype: method
+        outputname: RelationshipBetweenCrystalTargetAndDescriptor
+        outputtype: parts
   - blockname: AD_AT_CT
     order: workflow
     list:
     - group:
-      - !!omap
-        - methodname: generateAtomicDescriptor
-        - methodtype: function
-        - outputname: AtomicDescriptor
-        - outputtype: parts
+      - methodname: generateAtomicDescriptor
+        methodtype: function
+        outputname: AtomicDescriptor
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: RelationshipBetweenAtomicDescriptorToAtomTarget
-        - methodtype: method
-        - outputname: AtomicTarget
-        - outputtype: parts
+      - methodname: RelationshipBetweenAtomicDescriptorToAtomTarget
+        methodtype: method
+        outputname: AtomicTarget
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: AtomTargetToCrystalTarget
-        - methodtype: method
-        - outputname: RelationshipBetweenCrystalTargetAndDescriptor
-        - outputtype: parts
+      - methodname: AtomTargetToCrystalTarget
+        methodtype: method
+        outputname: RelationshipBetweenCrystalTargetAndDescriptor
+        outputtype: parts
