--- a/sample/EXSparseModel.yml
+++ b/sample/EXSparseModel.yml
@@ -1,17 +1,14 @@
 workflow:
-  format: v2.2
+  format: v2.3
   block:
   - blockname: ESsparse
     order: workflow
     list:
     - group:
-      - !!omap
-        - outputname: AllModels
-        - outputtype: parts
+      - outputname: AllModels
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: chooseModelByMaxScore
-        - methodtype: function
-        - outputname: SparseModeling
-        - outputtype: parts
-  
+      - methodname: chooseModelByMaxScore
+        methodtype: function
+        outputname: SparseModeling
+        outputtype: parts
