--- a/sample/MaterialsList_CrystalCandidatesTaxo.yml
+++ b/sample/MaterialsList_CrystalCandidatesTaxo.yml
@@ -1,7 +1,7 @@
 link:
-- nodename: NewsetCrystal
-  nodetype: parts
-  linktype: is-a
-  link:
+- link:
   - nodename: ParticleSwarm
   - nodename: GeneticAlgorithm
+  linktype: is-a
+  nodename: NewsetCrystal
+  nodetype: parts
