--- a/sample/MaterialsList_SearchGoodMaterial.yml
+++ b/sample/MaterialsList_SearchGoodMaterial.yml
@@ -1,71 +1,59 @@
 workflow:
-  format: v2.2
+  format: v2.3
   block:
-  - blockname:
+  - blockname: null
     order: workflow
     list:
     - group:
-      - !!omap
-        - outputname: raiseMaterialsList
-        - outputtype: function
-      - !!omap
-        - outputname: searchMaterialsListHavingTargetVariable
-        - outputtype: function
+      - outputname: raiseMaterialsList
+        outputtype: function
+      - outputname: searchMaterialsListHavingTargetVariable
+        outputtype: function
     - group:
-      - !!omap
-        - methodname: selectNoExperiment
-        - methodtype: function
-        - outputname: NoExperimentMaterialsList
-        - outputtype: parts
+      - methodname: selectNoExperiment
+        methodtype: function
+        outputname: NoExperimentMaterialsList
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: MaterialSynthesis
-        - methodtype: method
-        - outputname: SynthesizedMaterils
-        - outputtype: parts
+      - methodname: MaterialSynthesis
+        methodtype: method
+        outputname: SynthesizedMaterils
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: measureTargetQuanitty
-        - methodtype: function
-        - outputname: newTargetValues
-        - outputtype: parts
-      - !!omap
-        - outputname: getTargetSelectionCriterion
-        - outputtype: function
+      - methodname: measureTargetQuanitty
+        methodtype: function
+        outputname: newTargetValues
+        outputtype: parts
+      - outputname: getTargetSelectionCriterion
+        outputtype: function
     - group:
-      - !!omap
-        - methodname: SelectSynthesizedTaretMaterialsIteratively
-        - methodtype: function
-        - outputname: newTargetMaterial
-        - outputtype: parts
-  - blockname:
+      - methodname: SelectSynthesizedTaretMaterialsIteratively
+        methodtype: function
+        outputname: newTargetMaterial
+        outputtype: parts
+  - blockname: null
     order: workflow
     list:
     - group:
-      - !!omap
-        - outputname: TargetCriterion
-        - outputtype: parts
+      - outputname: TargetCriterion
+        outputtype: parts
     - group:
-      - !!omap
-        - methodname: TargetSelectionCriterion
-        - methodtype: parts
-        - outputname: getTargetSelectionCriterion
-        - outputtype: function
-  - blockname:
+      - methodname: TargetSelectionCriterion
+        methodtype: parts
+        outputname: getTargetSelectionCriterion
+        outputtype: function
+  - blockname: null
     order: workflow
     list:
     - group:
-      - !!omap
-        - methodname: MaterialsDatabase
-        - methodtype: method
-        - outputname: chooseMaterialsDatabase
-        - outputtype: function
-      - !!omap
-        - outputname: chooseTargetValues
-        - outputtype: function
+      - methodname: MaterialsDatabase
+        methodtype: method
+        outputname: chooseMaterialsDatabase
+        outputtype: function
+      - outputname: chooseTargetValues
+        outputtype: function
     - group:
-      - !!omap
-        - methodname: storeInMaterialsDataBase
-        - methodtype: function
-        - outputname: RicherMaterialsDatabase
-        - outputtype: parts
+      - methodname: storeInMaterialsDataBase
+        methodtype: function
+        outputname: RicherMaterialsDatabase
+        outputtype: parts
